<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.authentication.login.LoginActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="image"
            android:maxHeight="200dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/linear_layout_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_email" />

            <AutoCompleteTextView
                android:id="@+id/login_tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_layout_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintEnabled="false"
                android:ems="10"
                android:imeOptions="actionDone"
                app:passwordToggleEnabled="true"
                android:selectAllOnFocus="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRegisterBtnClicked"
            android:text="@string/action_register" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>