<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.summary.SummaryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:layout_marginBottom="30px"
                android:orientation="vertical"
                android:padding="30px">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/summary_time_per_tag"
                    android:textColor="#4B3E71" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barchart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">


                </com.github.mikephil.charting.charts.BarChart>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#9788BE" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:padding="30px">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/summary_time_per_goal"
                    android:textColor="#4B3E71" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/piechart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                </com.github.mikephil.charting.charts.PieChart>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#9788BE" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:padding="30px">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30px"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/summary_time_per_day"
                    android:textColor="#4B3E71" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/linechart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                </com.github.mikephil.charting.charts.LineChart>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>