<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".activities.main.MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="2">

        <LinearLayout
            android:id="@+id/action_todo"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:onClick="onTodoActionClicked"
            android:orientation="vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                app:srcCompat="@drawable/splashscreen_temp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/action_todo"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_lifestyle"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:onClick="onLifeStyleActionClicked"
            android:orientation="vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                app:srcCompat="@drawable/splashscreen_temp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/action_life_style"
                android:textSize="14sp"
                android:textStyle="bold"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_motivation"

            android:layout_margin="5dp"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:onClick="onMotivationActionClicked"
            android:orientation="vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                app:srcCompat="@drawable/splashscreen_temp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/action_motivation"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_summary"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:onClick="onSummaryActionClicked"
            android:orientation="vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                app:srcCompat="@drawable/splashscreen_temp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/action_summary"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <LinearLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--        <TextView-->
    <!--            android:id="@+id/action_todo"-->
    <!--            android:layout_width="70dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:onClick="onTodoActionClicked"-->
    <!--            android:singleLine="true"-->
    <!--            android:text="@string/action_todo"-->
    <!--            android:textSize="14sp"-->
    <!--            android:textStyle="bold" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/action_lifestyle"-->
    <!--            android:layout_width="70dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:onClick="onLifeStyleActionClicked"-->
    <!--            android:singleLine="true"-->
    <!--            android:text="@string/action_life_style"-->
    <!--            android:textSize="14sp"-->
    <!--            android:textStyle="bold" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/action_motivation"-->
    <!--            android:layout_width="70dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:onClick="onMotivationActionClicked"-->
    <!--            android:singleLine="true"-->
    <!--            android:text="@string/action_motivation"-->
    <!--            android:textSize="14sp"-->
    <!--            android:textStyle="bold" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/action_summary"-->
    <!--            android:layout_width="70dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:onClick="onSummaryActionClicked"-->
    <!--            android:singleLine="true"-->
    <!--            android:text="@string/action_summary"-->
    <!--            android:textSize="14sp"-->
    <!--            android:textStyle="bold" />-->
    <!--    </LinearLayout>-->

    <!--        <TextView-->
    <!--            android:id="@+id/action_lifestyle"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:onClick="onLifeStyleActionClicked"-->
    <!--            android:singleLine="true"-->
    <!--            android:text="@string/action_life_style"-->
    <!--            android:textSize="14sp"-->
    <!--            android:textStyle="bold"-->
    <!--            app:layout_columnWeight="1"-->
    <!--            app:layout_rowWeight="1" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/action_motivation"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:onClick="onMotivationActionClicked"-->
    <!--            android:singleLine="true"-->
    <!--            android:text="@string/action_motivation"-->
    <!--            android:textSize="14sp"-->
    <!--            android:textStyle="bold"-->
    <!--            app:layout_columnWeight="1"-->
    <!--            app:layout_rowWeight="1" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/action_summary"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:onClick="onSummaryActionClicked"-->
    <!--            android:singleLine="true"-->
    <!--            android:text="@string/action_summary"-->
    <!--            android:textSize="14sp"-->
    <!--            android:textStyle="bold"-->
    <!--            app:layout_columnWeight="1"-->
    <!--            app:layout_rowWeight="1" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView0"-->
    <!--            android:layout_width="70dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:singleLine="true"-->
    <!--            android:textSize="50sp"-->
    <!--            android:textStyle="bold"-->
    <!--             />-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView1"-->
    <!--            android:layout_width="70dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:singleLine="true"-->
    <!--            android:maxLines="1"-->
    <!--            android:textSize="50sp"-->
    <!--            android:textStyle="bold" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView2"-->
    <!--            android:layout_width="70dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:singleLine="true"-->
    <!--            android:textSize="50sp"-->
    <!--            android:textStyle="bold" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView3"-->
    <!--            android:layout_width="70dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:maxLines="1"-->
    <!--            android:singleLine="true"-->
    <!--            android:textSize="50sp"-->
    <!--            android:textStyle="bold"/>-->